--- a/index.html
+++ b/index.html
@@ -8,61 +8,78 @@
     </Head>
 
     <body>
-      <header>
+      <header class="main-header">
 
-            <section class="name header-boxes">
-              <h1>
-                  <div>Hey,</div>
-                  I'm Moises Cardenas
-              </h1>
-            </section>
-
-            <section class="photo header-boxes">
-                <img src="./assets/images/Moises.JPG" width="200px" height="200px" alt="A photo of Moises">
-            </section>
-        <!--Navigation-->
-            <nav class="nav header-boxes">
-                <ul>
-                  <li class="nav-item"><a href="#" class="nav-link">About Me</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link">My Work</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link">Contact Me</a></li>
-                  <li class="nav-item"><a href="#" class="nav-link">My Resume</a></li>
-                </ul>
-            </nav>
+         <!--Navigation-->
+         <nav class="nav">
+            <ul>
+              <li class="nav-item"><a href="#about-me" class="nav-link">About Me</a></li>
+              <li class="nav-item"><a href="#my-work" class="nav-link">My Work</a></li>
+              <li class="nav-item"><a href="#contact-me" class="nav-link">Contact Me</a></li>
+              <li class="nav-item"><a href="#my-resume" class="nav-link">My Resume</a></li>
+            </ul>
+        </nav>
+        <!--Name-->
+        <section>
+            <h1 class="name">
+                Hey,
+                <br>
+                I'm Moises Cardenas
+            </h1>
+         </section>
       </header>
 
     <!--hero/jumbotron-->
-      <!--My Bio section-->
-      <section class="me">
-          <h2>Get to know me</h2>
-          <p>Hello! Welcome to my portfolio. I would like to tell you a bit about myself. For starters my name is Moises, but 
-              many people call me Mo. I am currenty learning how to code in many languages. My hobbies include; photography, and other arts
-              and playing sports like pickleball and hitting the gym.
-          </p>
-      </section>
+      <section class="content">
+    <!--My Bio section-->
+        <article class="content-section">
+            <div id="about-me">
+            <h2>Get to know me</h2>
+                <div class="bio">
+                    <p>
+                      <img class="my-image" src="./assets/images/Moises.JPG" alt="image of moises">
+                      Hello! Welcome to my portfolio. I would like to tell you a bit about myself. For starters my name is Moises, but 
+                      many people call me Mo. I am currenty learning how to code in many languages. My hobbies include; photography, and other arts
+                      and playing sports like pickleball and hitting the gym.
+                    </p>
+                </div>
+            </div>
+        </article>
 
       <!--My Work Section-->
-      <section class="work">
-          <h2>My Work</h2>
-
-
-      </section>
+        <section class="content-section">
+            <div id="my-work">
+                <h2>My Work</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi cum itaque ipsam atque quasi eligendi soluta, quisquam 
+                      aliquam quos voluptates nulla? Quod maiores consequatur in dolores voluptatem exercitationem dolorem vel!
+                    </p>
+            </div>
+        </section>
 
       <!--Contact Section-->
-      <section class="contact">
-          <h2>
-              Contact Me
-          </h2>
-      </section>
+        <section class="content-section">
+            <div id="contact-me">
+                <h2>Contact Me</h2>
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui quia distinctio perferendis illo omnis ratione. Voluptate, at esse? Consequuntur,
+                      in nobis a repudiandae perferendis voluptate eaque dolores vero eos nulla.
+                    </p>
+            </div>
+        </section>
 
       <!--My Resume Section-->
-      <section class="resume">
-          <h2>
-              My Resume
-          </h2>
+        <section class="content-section">
+            <div id="my-resume">
+                <h2>My Resume</h2>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque placeat et voluptas nihil veritatis, non, labore accusantium voluptate minima soluta fugiat explicabo maxime.
+                      Beatae asperiores itaque possimus est corporis ullam!
+                    </p>
+            </div>
+        </section>
+
       </section>
-
-
     </body>
 
     <footer>
