finished header and About Me/My Work sections

--- a/index.html
+++ b/index.html
@@ -33,50 +33,48 @@
       <section class="content">
     <!--My Bio section-->
         <article class="content-section">
-            <div id="about-me">
-            <h2>Get to know me</h2>
+            <h2 id="about-me">GET TO KNOW ME</h2>
                 <div class="bio">
-                    <p>
+                    <article>
                       <img class="my-image" src="./assets/images/Moises.JPG" alt="image of moises">
-                      Hello! Welcome to my portfolio. I would like to tell you a bit about myself. For starters my name is Moises, but 
-                      many people call me Mo. I am currenty learning how to code in many languages. My hobbies include; photography, and other arts
-                      and playing sports like pickleball and hitting the gym.
-                    </p>
+                        <p>
+                          Hello! Welcome to my portfolio. I would like to tell you a bit about myself. For starters my name is Moises, but 
+                          many people call me Mo. I am currenty learning how to code in many languages. My hobbies include; photography, and other arts
+                          and playing sports like pickleball and hitting the gym.
+                        </p>
+                    </article>
                 </div>
-            </div>
         </article>
 
       <!--My Work Section-->
         <section class="content-section">
-            <div id="my-work">
-                <h2>My Work</h2>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi cum itaque ipsam atque quasi eligendi soluta, quisquam 
-                      aliquam quos voluptates nulla? Quod maiores consequatur in dolores voluptatem exercitationem dolorem vel!
-                    </p>
-            </div>
+            <h2 id="my-work">MY WORK</h2>
+                <div class="projects">
+                        <a href="https://moisescard.github.io/run-buddy/">
+                          <img src="./assets/images/run-buddy.png" alt="run buddy project">
+                        </a>
+                        <a href="https://moisescard.github.io/Code-Refactor1/">
+                          <img src="./assets/images/horseion.png" alt="horiseon project">
+                        </a>
+                </div>
         </section>
 
       <!--Contact Section-->
         <section class="content-section">
-            <div id="contact-me">
-                <h2>Contact Me</h2>
+                <h2 id="contact-me">CONTACT ME</h2>
                     <p>
                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui quia distinctio perferendis illo omnis ratione. Voluptate, at esse? Consequuntur,
                       in nobis a repudiandae perferendis voluptate eaque dolores vero eos nulla.
                     </p>
-            </div>
         </section>
 
       <!--My Resume Section-->
         <section class="content-section">
-            <div id="my-resume">
-                <h2>My Resume</h2>
+                <h2 id="my-resume">MY RESUME</h2>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque placeat et voluptas nihil veritatis, non, labore accusantium voluptate minima soluta fugiat explicabo maxime.
-                      Beatae asperiores itaque possimus est corporis ullam!
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid deleniti sed sit quidem, enim modi quis doloremque, dolorum numquam repellat, 
+                      neque error? Eaque ipsum eum accusantium numquam! Repellendus, maiores velit.
                     </p>
-            </div>
         </section>
 
       </section>
