finished footer and added the final touches

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <li class="nav-item"><a href="#about-me" class="nav-link">About Me</a></li>
               <li class="nav-item"><a href="#my-work" class="nav-link">My Work</a></li>
               <li class="nav-item"><a href="#contact-me" class="nav-link">Contact Me</a></li>
-              <li class="nav-item"><a href="#my-resume" class="nav-link">My Resume</a></li>
+              <li class="nav-item"><a href="https://docs.google.com/document/d/1JHyuVLCR39lV0QscbRAsoWgu0gsKFW6GCrSvhN8Db0M/edit?usp=sharing" class="nav-link">My Resume</a></li>
             </ul>
         </nav>
         <!--Name-->
@@ -47,7 +47,7 @@
         </article>
 
       <!--My Work Section-->
-        <section class="content-section">
+        <section class="content-section my-work">
             <h2 id="my-work">MY WORK</h2>
                 <div class="projects">
                         <a href="https://moisescard.github.io/run-buddy/">
@@ -58,29 +58,27 @@
                         </a>
                 </div>
         </section>
-
-      <!--Contact Section-->
-        <section class="content-section">
-                <h2 id="contact-me">CONTACT ME</h2>
-                    <p>
-                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui quia distinctio perferendis illo omnis ratione. Voluptate, at esse? Consequuntur,
-                      in nobis a repudiandae perferendis voluptate eaque dolores vero eos nulla.
-                    </p>
-        </section>
-
-      <!--My Resume Section-->
-        <section class="content-section">
-                <h2 id="my-resume">MY RESUME</h2>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid deleniti sed sit quidem, enim modi quis doloremque, dolorum numquam repellat, 
-                      neque error? Eaque ipsum eum accusantium numquam! Repellendus, maiores velit.
-                    </p>
-        </section>
-
       </section>
     </body>
 
     <footer>
+        <!--Contact Section-->
+        <section class="content-section">
+            <h2 id="contact-me">CONTACT ME</h2>
+            <section class="contacts">
+                <ul>
+                    <li>
+                        <p>561.307.1959</p>
+                    </li>
+                    <li>
+                        <a href="mailto:macv123321@gmail.com">macv123321@gmail.com</a>
+                    </li>
+                    <li>
+                        <a href="http://linkedin.com/in/moises-cardenas-port">linkedin</a>
+                    </li>
+                </ul>
+            </section>
+    </section>
 
     </footer>
 </html>
