updated a few items

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
             <h2 id="my-work">MY WORK</h2>
                 <div class="projects">
                         <a href="https://moisescard.github.io/run-buddy/">
-                          <img src="./assets/images/run-buddy.png" alt="run buddy project">
+                          <img id="run-buddy" src="./assets/images/run-buddy.png" alt="run buddy project">
                         </a>
+                    
                         <a href="https://moisescard.github.io/Code-Refactor1/">
                           <img src="./assets/images/horseion.png" alt="horiseon project">
                         </a>
