--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                         <a href="https://moisescard.github.io/Code-Refactor1/">
                           <img src="./assets/images/horseion.png" alt="horiseon project">
                         </a>
+                        <a href="https://moisescard.github.io/Lens-Trends/">
+                          <img id="lens-trends" src="./assets/images/lensTrends.jpg" alt="lens trends project">
+                        </a>
                 </div>
         </section>
       </section>
