--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                         <a href="https://moisescard.github.io/run-buddy/">
                           <img id="run-buddy" src="./assets/images/run-buddy.png" alt="run buddy project">
                         </a>
-                    
+                        <a href="https://the-front-yard.herokuapp.com/">
+                          <img src="./assets/images/frontYard.png" alt="front yard project">
+                        </a>
                         <a href="https://moisescard.github.io/Code-Refactor1/">
                           <img src="./assets/images/horseion.png" alt="horiseon project">
                         </a>
